copy in openai's operations to get APIM routing

--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-15-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-15-preview/azure-ai-projects.json
@@ -2503,6 +2503,56 @@
         "type"
       ]
     },
+    "EvalsErrorNotFoundResponse": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "string",
+          "x-nullable": true
+        },
+        "message": {
+          "type": "string"
+        },
+        "param": {
+          "type": "string",
+          "x-nullable": true
+        },
+        "type": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "code",
+        "message",
+        "param",
+        "type"
+      ]
+    },
+    "EvalsErrorResponse": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "string",
+          "x-nullable": true
+        },
+        "message": {
+          "type": "string"
+        },
+        "param": {
+          "type": "string",
+          "x-nullable": true
+        },
+        "type": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "code",
+        "message",
+        "param",
+        "type"
+      ]
+    },
     "Evaluation": {
       "type": "object",
       "description": "Evaluation Definition",
