--- a/specification/ai/data-plane/Azure.AI.Projects/stable/2025-05-01/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/stable/2025-05-01/azure-ai-projects.json
@@ -1685,6 +1685,56 @@
         "type"
       ]
     },
+    "EvalsErrorNotFoundResponse": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "string",
+          "x-nullable": true
+        },
+        "message": {
+          "type": "string"
+        },
+        "param": {
+          "type": "string",
+          "x-nullable": true
+        },
+        "type": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "code",
+        "message",
+        "param",
+        "type"
+      ]
+    },
+    "EvalsErrorResponse": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "string",
+          "x-nullable": true
+        },
+        "message": {
+          "type": "string"
+        },
+        "param": {
+          "type": "string",
+          "x-nullable": true
+        },
+        "type": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "code",
+        "message",
+        "param",
+        "type"
+      ]
+    },
     "FieldMapping": {
       "type": "object",
       "description": "Field mapping configuration class",
