--- a/specification/ai/data-plane/VoiceLive/tspconfig.yaml
+++ b/specification/ai/data-plane/VoiceLive/tspconfig.yaml
@@ -31,6 +31,7 @@ options:
   "@azure-typespec/http-client-csharp":
     namespace: Azure.AI.VoiceLive
     model-namespace: false
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
   "@azure-tools/typespec-ts":
     package-dir: "azure-ai-voicelive"
     package-details:
