--- a/specification/webpubsub/data-plane/WebPubSub/tspconfig.yaml
+++ b/specification/webpubsub/data-plane/WebPubSub/tspconfig.yaml
@@ -40,7 +40,7 @@ options:
   "@azure-tools/typespec-ts":
     service-dir: "sdk/web-pubsub"
     is-modular-library: true
-    emitter-output-dir: "{output-dir}/{service-dir}/webpubsub-rest"
+    emitter-output-dir: "{output-dir}/{service-dir}/web-pubsub"
     package-details:
       name: "@azure/web-pubsub"
       version: "1.2.0"
