--- a/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/stable/2025-10-01/examples/ListDeploymentSettingsByCluster.json
+++ b/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/stable/2025-10-01/examples/ListDeploymentSettingsByCluster.json
@@ -73,6 +73,7 @@
                               "endingAddress": "10.57.48.66"
                             }
                           ],
+                          "dnsServerConfig": "UseDnsServer",
                           "dnsServers": [
                             "10.57.50.90"
                           ]
