--- a/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/stable/2025-10-01/examples/PutDeploymentSettings.json
+++ b/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/stable/2025-10-01/examples/PutDeploymentSettings.json
@@ -58,6 +58,7 @@
                         "endingAddress": "10.57.48.66"
                       }
                     ],
+                    "dnsServerConfig": "UseDnsServer",
                     "dnsServers": [
                       "10.57.50.90"
                     ]
@@ -246,6 +247,7 @@
                           "endingAddress": "10.57.48.66"
                         }
                       ],
+                      "dnsServerConfig": "UseDnsServer",
                       "dnsServers": [
                         "10.57.50.90"
                       ]
@@ -523,6 +525,7 @@
                           "endingAddress": "10.57.48.66"
                         }
                       ],
+                      "dnsServerConfig": "UseDnsServer",
                       "dnsServers": [
                         "10.57.50.90"
                       ]
