--- a/specification/compute/resource-manager/Microsoft.Compute/RecommenderRP/tspconfig.yaml
+++ b/specification/compute/resource-manager/Microsoft.Compute/RecommenderRP/tspconfig.yaml
@@ -37,9 +37,9 @@ options:
     package-details:
       name: "@azure/arm-computerecommender"
   "@azure-tools/typespec-go":
-    service-dir: "sdk/resourcemanager/computerecommender"
-    emitter-output-dir: "{output-dir}/{service-dir}/armcomputerecommender"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armcomputerecommender"
+    service-dir: "sdk/resourcemanager/compute"
+    emitter-output-dir: "{output-dir}/{service-dir}/armrecommender"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armrecommender"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
