--- a/specification/compute/resource-manager/Microsoft.Compute/RecommenderRP/tspconfig.yaml
+++ b/specification/compute/resource-manager/Microsoft.Compute/RecommenderRP/tspconfig.yaml
@@ -16,7 +16,7 @@ options:
     flavor: azure
     clear-output-folder: true
     model-namespace: true
-    namespace: "Azure.ResourceManager.ComputeRecommender"
+    namespace: "Azure.ResourceManager.Compute.Recommender"
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-computerecommender"
