--- a/specification/compute/resource-manager/Microsoft.Compute/RecommenderRP/tspconfig.yaml
+++ b/specification/compute/resource-manager/Microsoft.Compute/RecommenderRP/tspconfig.yaml
@@ -25,8 +25,9 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-computerecommender"
-    namespace: "com.azure.resourcemanager.computerecommender"
+    service-dir: "sdk/compute"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-compute-recommender"
+    namespace: "com.azure.resourcemanager.compute.recommender"
     service-name: "Compute Recommender"
     flavor: azure
   "@azure-tools/typespec-ts":
