--- a/specification/ai/Azure.AI.Agents/tspconfig.yaml
+++ b/specification/ai/Azure.AI.Agents/tspconfig.yaml
@@ -32,14 +32,14 @@ options:
     namespace: Azure.AI.Agents.Persistent
     model-namespace: false
     api-version: "2025-05-15-preview"
-  "@azure-tools/typespec-ts":
-    package-dir: "ai-agents"
-    api-version: "v1"
-    generate-test: true
-    generate-metadata: false
-    package-details:
-      name: "@azure/ai-agents"
-    flavor: azure
+  # "@azure-tools/typespec-ts":
+  #   package-dir: "ai-agents"
+  #   api-version: "v1"
+  #   generate-test: true
+  #   generate-metadata: false
+  #   package-details:
+  #     name: "@azure/ai-agents"
+  #   flavor: azure
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/data-plane"
