--- a/specification/ai/Azure.AI.Projects/tspconfig.yaml
+++ b/specification/ai/Azure.AI.Projects/tspconfig.yaml
@@ -22,16 +22,16 @@ options:
     emitter-output-dir: "{output-dir}/{service-dir}/{package-name}"
     package-name: Azure.AI.Projects
     api-version: "2025-05-15-preview"
-  "@azure-tools/typespec-ts":
-    package-dir: "ai-projects"
-    api-version: "v1"
-    is-modular-library: true
-    generate-test: true
-    generate-metadata: false
-    package-details:
-      name: "@azure/ai-projects"
-      description: "Azure AI Projects Client"
-    flavor: azure
+  # "@azure-tools/typespec-ts":
+  #   package-dir: "ai-projects"
+  #   api-version: "v1"
+  #   is-modular-library: true
+  #   generate-test: true
+  #   generate-metadata: false
+  #   package-details:
+  #     name: "@azure/ai-projects"
+  #     description: "Azure AI Projects Client"
+  #   flavor: azure
   "@azure-tools/typespec-java":
     emitter-output-dir: "{output-dir}/{service-dir}/azure-ai-projects"
     namespace: com.azure.ai.projects
