--- a/specification/ai/OpenAI.Assistants/tspconfig.yaml
+++ b/specification/ai/OpenAI.Assistants/tspconfig.yaml
@@ -43,10 +43,10 @@ options:
     custom-types-subpackage: "implementation.models"
     custom-types: "FileListResponse,OpenAIPageableListOfAssistant,OpenAIPageableListOfRunStep,OpenAIPageableListOfThreadMessage,OpenAIPageableListOfThreadRun,OpenAIPageableListOfVectorStore,OpenAIPageableListOfVectorStoreFile,UploadFileRequest"
     flavor: azure
-  "@azure-tools/typespec-ts":
-    package-dir: "openai"
-    generate-metadata: false
-    is-modular-library: true
-    package-details:
-      name: "@azure/openai-assistants"
-    flavor: azure
+  # "@azure-tools/typespec-ts":
+  #   package-dir: "openai"
+  #   generate-metadata: false
+  #   is-modular-library: true
+  #   package-details:
+  #     name: "@azure/openai-assistants"
+  #   flavor: azure
