--- a/specification/connectedcache/ConnectedCache.Management/tspconfig.yaml
+++ b/specification/connectedcache/ConnectedCache.Management/tspconfig.yaml
@@ -28,15 +28,10 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "arm-connectedcache"
-    azureSdkForJs: true
-    isModularLibrary: true
-    generateMetadata: true
-    flavor: "azure"
-    hierarchyClient: false
-    experimentalExtensibleEnums: true
-    enableOperationGroup: true
-    packageDetails:
-      name: "@azure/arm-connectedcache"
+    flavor: azure
+    experimental-extensible-enums: true
+    package-details:
+      name: "@azure/arm-connectedcache"  
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/connectedcache"
     emitter-output-dir: "{output-dir}/{service-dir}/armconnectedcache"
