--- a/specification/dataprotection/resource-manager/Microsoft.DataProtection/DataProtection/tspconfig.yaml
+++ b/specification/dataprotection/resource-manager/Microsoft.DataProtection/DataProtection/tspconfig.yaml
@@ -23,12 +23,13 @@ options:
     namespace: "com.azure.resourcemanager.dataprotection"
     service-name: "Data Protection" # human-readable service name, whitespace allowed
     flavor: azure
-  "@azure-tools/typespec-ts":
-    package-dir: "arm-dataprotection"
-    flavor: azure
-    experimental-extensible-enums: true
-    package-details:
-      name: "@azure/arm-dataprotection"
+  # disable by known issue: https://github.com/Azure/autorest.typescript/issues/3391
+  # "@azure-tools/typespec-ts":
+  #   package-dir: "arm-dataprotection"
+  #   flavor: azure
+  #   experimental-extensible-enums: true
+  #   package-details:
+  #     name: "@azure/arm-dataprotection"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/dataprotection"
     emitter-output-dir: "{output-dir}/{service-dir}/armdataprotection"
