--- a/specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml
@@ -37,16 +37,16 @@ options:
     include-api-view-properties: false
   # Uncomment this line and add "@azure-tools/typespec-csharp" to your package.json to generate C# code
   # "@azure-tools/typespec-csharp": true
-  "@azure-tools/typespec-ts":
-    package-dir: "keyvault-secrets"
-    generate-metadata: true
-    src-folder: "src/generated"
-    experimental-extensible-enums: true
-    is-modular-library: true
-    package-details:
-      name: "@azure/keyvault-secrets"
-      description: "Azure Key Vault Secrets"
-    flavor: azure
+  # "@azure-tools/typespec-ts":
+  #   package-dir: "keyvault-secrets"
+  #   generate-metadata: true
+  #   src-folder: "src/generated"
+  #   experimental-extensible-enums: true
+  #   is-modular-library: true
+  #   package-details:
+  #     name: "@azure/keyvault-secrets"
+  #     description: "Azure Key Vault Secrets"
+  #   flavor: azure
   "@azure-tools/typespec-go":
     module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azsecrets"
     service-dir: "sdk/security/keyvault"
