add go sdk suppression

--- a/specification/deviceregistry/resource-manager/sdk-suppressions.yaml
+++ b/specification/deviceregistry/resource-manager/sdk-suppressions.yaml
@@ -24,3 +24,4 @@ suppressions:
         - Type of `AssetStatus.Version` has been changed from `*int32` to `*int64`
         - Type of `DataPoint.ObservabilityMode` has been changed from `*DataPointsObservabilityMode` to `*DataPointObservabilityMode`
         - Type of `Event.ObservabilityMode` has been changed from `*EventsObservabilityMode` to `*EventObservabilityMode`
+        - Struct `ErrorAdditionalInfoInfo` has been removed
