--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
@@ -1447,6 +1447,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Insights_ListInsights": {
+            "$ref": "./examples/Insights_ListInsights_MinimumSet_Gen.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1504,6 +1509,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "Insights_GenerateInsights": {
+            "$ref": "./examples/Insights_GenerateInsights_MinimumSet_Gen.json"
+          }
         }
       }
     },
@@ -1558,6 +1568,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Insights_GetInsight": {
+            "$ref": "./examples/Insights_GetInsight_MinimumSet_Gen.json"
           }
         }
       }
