--- a/specification/purviewdatagovernace/Azure.Analaytics.Purview.DataQuality/tspconfig.yaml
+++ b/specification/purviewdatagovernace/Azure.Analaytics.Purview.DataQuality/tspconfig.yaml
@@ -1,14 +1,12 @@
 emit:
   - "@azure-tools/typespec-autorest"
-linter:
-  extends:
-    - "@azure-tools/typespec-azure-rulesets/data-plane"
+
 options:
   "@azure-tools/typespec-autorest":
     azure-resource-provider-folder: "data-plane"
     emitter-output-dir: "{project-root}/.."
     examples-dir: "{project-root}/examples"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
+    output-file: "{azure-resource-provider-folder}/Azure.Analaytics.Purview.DataQuality/{version-status}/{version}/purviewDataQuality.json"
   # Uncomment this line and add "@azure-tools/typespec-python" to your package.json to generate Python code
   # "@azure-tools/typespec-python":
   #   "basic-setup-py": true
