--- a/specification/healthbot/HealthBot.Management/tspconfig.yaml
+++ b/specification/healthbot/HealthBot.Management/tspconfig.yaml
@@ -33,8 +33,8 @@ options:
       name: "@azure/arm-healthbot"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/healthbot"
-    package-dir: "armhealthbot"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armhealthbot"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armhealthbot"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
